manifests/openshift4/deployment.yaml
apiVersion: template.openshift.io/v1
kind: Template
metadata:
  name: deployment-edpay-services
parameters:
- name: IMAGE
  required: true
objects:
- kind: Deployment
  apiVersion: apps/v1
  metadata:
    name: hello
    labels:
      app: hello
  spec:
    replicas: 2
    selector:
      matchLabels:
        app: hello
    template:
      metadata:
        labels:
          app: hello
      spec:
        containers:
        - name: hello
          image: ${IMAGE}
          ports:
          - containerPort: 5000
          resources:
            limits:
              cpu: "1"
              memory: "1G"
            requests:
              cpu: "0.5"
              memory: "500Mi"
