manifests/openshift4/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: hello
  labels:
    app: hello
spec:
  to:
    name: hello
    kind: Service
  port:
    targetPort: hello-5000-tcp
